atualizei a logo e fiz a responsivdade da sobre

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href= "src/petlogoFooter.png" type="image/x-icon">
+  <link rel="shortcut icon" href= "src/logoPetNova.png" type="image/x-icon">
   <title>Sobre Nós</title>
   <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="sobre.css" />
 </head>
 <body>
   <header class="header">
-  <img src="./src/LogoPET.png" alt="Logo do PET" />
+  <img src="./src/logoPetNova.png" alt="Logo do PET" />
 
   <!-- Menu Desktop -->
   <nav class="navigation_header desktop-menu">
@@ -108,7 +108,7 @@
     </div>
 
     <div class="footer-logos">
-      <img src="src/petlogoFooter.png" alt="Logo PET Computação">
+      <img src="src/logoPetNova.png" alt="Logo PET Computação">
       <img src="src/logoUeceFooter.png" alt="Logo UECE">
     </div>
   </footer>
