--- a/atividades.html
+++ b/atividades.html
@@ -3,23 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href= "src/petlogoFooter.png" type="image/x-icon">
+    <link rel="shortcut icon" href= "src/logoPetNova.png" type="image/x-icon">
     <title>Atividades</title>
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="atividades.css">
 </head>
 <body>
     <header class="header">
-  <img src="./src/LogoPET.png" alt="Logo do PET">
-  
-  <nav class="navigation_header">
+  <img src="./src/logoPetNova.png" alt="Logo do PET">
+    <!-- Menu Desktop -->
+  <nav class="navigation_header desktop-menu">
+    <a href="index.html">Sobre nós</a>
+    <a href="selecao.html" class="active">Seleção</a>
+    <a href="secomp.html">SECOMP</a>
+    <a href="atividades.html">Atividades</a>
+    <a href="membros.html">Membros</a>
+  </nav>
+    <!-- Botão Mobile -->
+  <button class="menu-toggle" aria-label="Abrir menu">☰</button>
+    <!-- Menu Mobile -->
+  <nav id="mobileMenu" class="mobile-menu">
     <a href="index.html">Sobre nós</a>
     <a href="selecao.html">Seleção</a>
     <a href="secomp.html">SECOMP</a>
     <a href="atividades.html">Atividades</a>
     <a href="membros.html">Membros</a>
   </nav>
-
+    <!-- Toggle modo -->
   <button id="modo-toggle" class="toggle-botao">
     <div class="icone"></div>
   </button>
@@ -95,7 +105,7 @@
   </div>
 
   <div class="footer-logos">
-    <img src="src/petlogoFooter.png" alt="Logo PET Computação">
+    <img src="src/logoPetNova.png" alt="Logo PET Computação">
     <img src="src/logoUeceFooter.png" alt="Logo UECE">
   </div>
 </footer>
