--- a/inovacode.html
+++ b/inovacode.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="shortcut icon" href= "src/petlogoFooter.png" type="image/x-icon">
+  <link rel="shortcut icon" href= "src/logoPetNova.png" type="image/x-icon">
   <title>Inovacode</title>
   <link rel="stylesheet" href="inovacode.css" />
 </head>
 <body>
 
    <header class="header">
-  <img src="./src/LogoPET.png" alt="Logo do PET">
-  
-  <nav class="navigation_header">
+  <img src="./src/logoPetNova.png" alt="Logo do PET">
+    <!-- Menu Desktop -->
+  <nav class="navigation_header desktop-menu">
     <a href="index.html">Sobre nós</a>
     <a href="selecao.html">Seleção</a>
     <a href="secomp.html">SECOMP</a>
@@ -20,6 +20,19 @@
     <a href="membros.html">Membros</a>
   </nav>
 
+  <!-- Botão Mobile -->
+  <button class="menu-toggle">☰</button>
+
+  <!-- Menu Mobile -->
+  <nav id="mobileMenu" class="mobile-menu">
+    <a href="index.html">Sobre nós</a>
+    <a href="selecao.html">Seleção</a>
+    <a href="secomp.html">SECOMP</a>
+    <a href="atividades.html">Atividades</a>
+    <a href="membros.html">Membros</a>
+  </nav>
+
+  <!-- Botão de modo claro/escuro -->
   <button id="modo-toggle" class="toggle-botao">
     <div class="icone"></div>
   </button>
@@ -81,17 +94,12 @@
   </div>
 
   <div class="footer-logos">
-    <img src="src/petlogoFooter.png" alt="Logo PET Computação">
+    <img src="src/logoPetNova.png" alt="Logo PET Computação">
     <img src="src/logoUeceFooter.png" alt="Logo UECE">
   </div>
 </footer>
 
-  <script>
-    const toggleButton = document.querySelector('.toggle-botao');
-    toggleButton.addEventListener('click', () => {
-      document.body.classList.toggle('modo-claro');
-    });
-  </script>
+  <script src="sobre.js"></script>
 
 </body>
 </html>
