--- a/inovacode.html
+++ b/inovacode.html
@@ -44,13 +44,13 @@
 
     <section class="cards-container">
   <div class="card">
-    <img src="src/pessoaProgramando.jpg" alt="Curso 1">
+    <img src="src/logoInovacode.jpg" alt="Curso 1">
     <h2>Curso ainda a definir</h2>
     <p class="data">-/-/- <br> Ainda a definir</p>
     <p class="descricao">
       Estamos escolhendo o tema do curso com carinho. Fique atento às próximas atualizações.
     </p>
-    <button class="btn azul">INSCREVER-SE</button>
+    <a href="#" class="btn azul">INSCREVER-SE</a>
   </div>
 
   <div class="card encerrado">
@@ -64,15 +64,15 @@
     <a href="#" class="btn-certificado">ACESSE SEU CERTIFICADO</a>
   </div>
 
-  <div class="card encerrado">
-    <img src="src/cursoLLM.png" alt="Curso 3">
-    <h2>Curso de LLM</h2>
-    <p class="data">07/08/25 <br> 15:00 - 17:00</p>
+  <div class="card">
+    <img src="src/logoInovacode.jpg" alt="Curso 3">
+    <h2>Curso ainda a definir</h2>
+    <p class="data">-/-/- <br> Ainda a definir</p>
     <p class="descricao">
-      Aprenda a utilizar Inteligência Artificial: conheça ferramentas, descubra como aplicá-las e desenvolva prompts mais eficazes.
+      Estamos escolhendo o tema do curso com carinho. Fique atento às próximas atualizações.
     </p>
 
-    <a href="#" class="btn-certificado">ACESSE SEU CERTIFICADO</a>
+    <a href="#" class="btn azul">INSCREVER-SE</a>
   </div>
 </section>
   </main>
