--- a/mesaredonda.html
+++ b/mesaredonda.html
@@ -48,7 +48,7 @@
     <div class="card">
       <h2>Nome da Palestra</h2>
       <p class="data">-/-/- <br> Ainda a definir<br>Local: Auditório do PPGCC</p>
-      <img src="src/imagemTeste.webp" alt="Curso 1">
+      <img src="src/logoMesaredonda.jpg" alt="Curso 1">
     </div>
     <a href="#" class="btn-certificado">CERTIFICADO INDISPONÍVEL</a>
   </div>
