--- a/tutoria.html
+++ b/tutoria.html
@@ -39,7 +39,7 @@
   </header>
 
   <main class="conteudo">
-    <h1 class="titulo">TUTORIA - 2025.2</h1>
+    <h1 class="titulo">TUTORIA - 2026.1</h1>
     <p class="descricao">
       A tutoria visa ajudar os estudantes em disciplinas específicas, promovendo o aprendizado colaborativo. Confira os horários abaixo:
     </p>
@@ -58,37 +58,37 @@
         <tbody>
           <tr>
             <td>Matemática Discreta</td>
-            <td>Olga e Beatriz</td>
-            <td>03/09 e 05/09</td>
-            <td>18h-18h50 e 14h-14h50</td>
+            <td>--</td>
+            <td>-/-</td>
+            <td>Ainda a definir</td>
             <td>Online</td>
           </tr>
           <tr>
             <td>Geometria Análitica</td>
-            <td>Pedro e Vitor</td>
-            <td>01/09 e 05/09</td>
-            <td>18h-18h50 e 15h-15h50</td>
+            <td>--</td>
+            <td>-/-</td>
+            <td>Ainda a definir</td>
             <td>Online</td>
           </tr>
           <tr>
             <td>Pré-Cálculo</td>
-            <td>Lucas, João e Prudêncio</td>
-            <td>02/09 e 04/09</td>
-            <td>18h-18h50 e 19h-19h50</td>
+            <td>--</td>
+            <td>-/-</td>
+            <td>Ainda a definir</td>
             <td>Online</td>
           </tr>
           <tr>
             <td>Programação e Algoritmos</td>
-            <td>Gabriel, Marina e Letícia</td>
-            <td>02/09 e 03/09</td>
-            <td>19h-19h50</td>
+            <td>--</td>
+            <td>-/-</td>
+            <td>Ainda a definir</td>
             <td>Online</td>
           </tr>
           <tr>
             <td>Organização de Computadores</td>
-            <td>Rian e Camila</td>
-            <td>01/09 e 04/09</td>
-            <td>19h-19h50 e 18h-18h50</td>
+            <td>--</td>
+            <td>-/-</td>
+            <td>Ainda a definir</td>
             <td>Online</td>
           </tr>
         </tbody>
